--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>hey</title>
   </head>
   <body>
-    <li><a href="https://flatironschool.com"></a></a></li>
+    <li><a href="https://flatironschool.com">Flatiron School</a></a></li>
     
   </body>
 </html>
